--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio-website",
-  "homepage": "http://laveshkumbhalkar.com",
+  "homepage": "http://laveshk.in",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
